--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,6 +33,10 @@ jobs:
         run: |
           git merge --no-ff ${GITHUB_SHA}
 
+      - name: Install mdBook
+        run: |
+          cargo install mdbook
+
       - name: Build
         run: |
           mdbook build
