--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -20,6 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: DavidAnson/markdownlint-cli2-action@v18
+        with:
+          globs: '**/*.md'
+
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v2
         with:
